# utils

./: .gitmodules  CMakeLists.txt  README.md  cleanup.sh  todo.org
3p/: build_using_cmake.sh
benchmark/: CMakeLists.txt  experiments.hpp  lookuptable.cpp  memchr.cpp  string.cpp  timeutils.cpp
src/: avx2-strstr-v2-clang-specific.cpp  avx2-strstr-v2-clang-specific.hpp  copyright.hpp  dumper.hpp  matchers.hpp  matchers_avx2.hpp  matchers_sse2.hpp  memchr.hpp  random_string.cpp  random_string.hpp  regex_matchers.hpp  strcmp.hpp  string.hpp  string_avx2.hpp  system.hpp  timer.hpp  timestamp.hpp  timestamp_experiments.hpp  timeutils.hpp
unittests/: CMakeLists.txt  exact_matchers.cpp  matchers.cpp  random_string.cpp  regex_matchers.cpp  string.cpp  timestamp.cpp  timeutils.cpp
